# vectorless_rag_chat_bot

./: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  pyproject.toml
data/: data.db
src/: __init__.py  database.py  main.py  models.py  rag.py
src/templates/: base.html  chat.html  index.html
utils/: config.py
